--- a/_posts/2017-9-26-ubuntu安装配置笔记（一）.md
+++ b/_posts/2017-9-26-ubuntu安装配置笔记（一）.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: ubuntu系统配置
+title: ubuntu安装配置笔记（一）
 categories: linux
-description: ubuntu系统配置
+description: ubuntu系统安装
 ---
 
 # 安装ubuntu
