--- a/_posts/2017-9-26-ubuntu常用命令.md
+++ b/_posts/2017-9-26-ubuntu常用命令.md
@@ -6,11 +6,12 @@ description: Ubuntu常用命令
 ---
 
 ## 压缩与解压缩命令
-linux系统中常见有三种格式的压缩文件,文件后缀名分别为：.zip 、 .tar.gz  、 .tar.bz2
+linux系统中有以下五种格式的压缩文件,分别为：.zip 、 .gz 、 .bz2 、 .tar.gz  、 .tar.bz2，其中最常用的文件压缩格式为 .tar.gz和.tar.bz2。
 
-这三种文件的压缩与解压缩命令如下：
 
-### 后缀名为 .zip的压缩文件，如对file.zip进行解压缩
+### .zip格式
+
+如对file.tar.gz进行解压缩
 
 解压命令：
 
@@ -21,22 +22,70 @@ linux系统中常见有三种格式的压缩文件,文件后缀名分别为：.z
 
 	zip -r file/ file.zip
 
-### 后缀名为 .tar.gz的压缩文件，如对file.tar.gz进行解压缩
+*zip格式的文件可以windows和linux两个系统之间直接转换，windows中其他的压缩文件格式如.rar 和 .7z 在linux系统中无法识别*
+
+### .gz格式
+
+#### 压缩命令
+
+压缩为.gz格式的压缩文件，源文件回消失
+
+	gzip file
+
+如果想保留源文件
+
+	gzip -c file > file.gz
+
+压缩目录时只会压缩目录下的所有子文件，但是不能压缩目录
+
+	gzip -r dir
+
+#### 解压命令
+
+	gzip -d file.gz
+
+或者
+
+	gunzip file.gz
+
+### .bz2格式
+
+#### 压缩命令
+
+压缩为.bz2格式，不保留源文件
+
+	bzip2 file
+
+如果保留源文件
+
+	bzip2 -k file
+
+#### 解压命令
+
+-k 保留压缩文件 bunzip2 压缩文件
+
+	bzip2 -d file.bz2
+
+### .tar.gz格式
+
+如对file.tar.gz进行解压缩
 
 解压命令：
 
-	tar zxvf file.tar.gz
+	tar -zxvf file.tar.gz
 
 
 对file.zip解压缩后的文件进行压缩：
 
-	tar zcvf file/ file.tar.gz
+	tar -zcvf file/ file.tar.gz
 
-### 后缀名为 .tar.bz2的压缩文件，如对file.tar.bz2进行解压缩
+### .tar.bz2格式
+
+如对file.tar.bz2进行解压缩
 
 解压命令：
 
-	tar jxvf file.tar.bz2
+	tar -jxvf file.tar.bz2
 
 
 对file.zip解压缩后的文件进行压缩：
