--- a/_posts/2017-9-26-ubuntu常用命令.md
+++ b/_posts/2017-9-26-ubuntu常用命令.md
@@ -9,14 +9,16 @@ description: Ubuntu常用命令
 linux系统中有以下五种格式的压缩文件,分别为：.zip 、 .gz 、 .bz2 、 .tar.gz  、 .tar.bz2，其中最常用的文件压缩格式为 .tar.gz和.tar.bz2。
 
 
+
 ### .zip格式
 
-如对file.tar.gz进行解压缩
+如对file.zip进行操作
 
-解压命令：
+#### 解压命令：
 
 	unzip file.zip
 
+#### 压缩命令
 
 对file.zip解压缩后的文件进行压缩：
 
@@ -26,9 +28,19 @@ linux系统中有以下五种格式的压缩文件,分别为：.zip 、 .gz 、 
 
 ### .gz格式
 
+如对file.gz进行操作
+
+#### 解压命令
+
+	gzip -d file.gz
+
+或者
+
+	gunzip file.gz
+
 #### 压缩命令
 
-压缩为.gz格式的压缩文件，源文件回消失
+文件file进行压缩，压缩为.gz格式，源文件回消失
 
 	gzip file
 
@@ -40,19 +52,23 @@ linux系统中有以下五种格式的压缩文件,分别为：.zip 、 .gz 、 
 
 	gzip -r dir
 
+
+### .bz2格式
+如对file.bz2进行操作
+
 #### 解压命令
 
-	gzip -d file.gz
+-k 保留压缩文件 
+
+	bunzip2 压缩文件
 
 或者
 
-	gunzip file.gz
-
-### .bz2格式
+	bzip2 -d file.bz2
 
 #### 压缩命令
 
-压缩为.bz2格式，不保留源文件
+对文件file进行压缩，压缩为.bz2格式，源文件消失
 
 	bzip2 file
 
@@ -60,37 +76,33 @@ linux系统中有以下五种格式的压缩文件,分别为：.zip 、 .gz 、 
 
 	bzip2 -k file
 
-#### 解压命令
-
--k 保留压缩文件 bunzip2 压缩文件
-
-	bzip2 -d file.bz2
 
 ### .tar.gz格式
 
-如对file.tar.gz进行解压缩
+如对file.tar.gz进行操作
 
-解压命令：
+#### 解压命令：
 
 	tar -zxvf file.tar.gz
 
+#### 压缩命令
+对file目录进行压缩：
 
-对file.zip解压缩后的文件进行压缩：
-
-	tar -zcvf file/ file.tar.gz
+	tar -zcvf file.tar.gz file/ 
 
 ### .tar.bz2格式
 
 如对file.tar.bz2进行解压缩
 
-解压命令：
+#### 解压命令：
 
 	tar -jxvf file.tar.bz2
 
+#### 压缩命令
 
-对file.zip解压缩后的文件进行压缩：
+对file目录进行压缩：
 
-	tar jcvf file/ file.tar.bz2
+	tar jcvf file.tar.bz2 file/ 
 
 
 
